tests/src/frontend/typechecking/invalid/deferred_is_not_untracked.sk
base class P {
  deferred fun foo(): void {
    this.getData()
  }
  deferred fun getData(): void;
}

class UntrackedC() extends P {
  untracked fun getData(): void {
    void
  }
}
